Student and Instructor Controls Complete; Cohort Controller GetAllCohorts complete

--- a/StudentExercisesAPI/appsettings.json
+++ b/StudentExercisesAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-2BPE20J\\SQLEXPRESS;Database=StudentExercises;Trusted_Connection=True;"
+  }
 }
